# cli_tribal_kb_from_data_sf

./: .gitignore  PROJECT_LOG.md  README.md  pyproject.toml
docs/: rules-reference.md
examples/: objects.json  rules.json
examples/data/: AccountTeamMember.csv  Contact.CSV  User.csv  account.csv  accounts.csv  case.CSV  contacts.csv  opportunities.csv  opportunity.csv  task.csv
rules_needing_imported/: chatgpt_info_rules.json  claude_info_rules.json
src/tribal_kb/: __init__.py  __main__.py  cli.py  data.py  models.py  report.py  rules.py
src/tribal_kb/templates/: blueprint.html  executive.html  field-notes.html  midnight.html  signal-board.html
tests/: test_cli.py  test_data.py  test_rules.py
