[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tribal-kb"
version = "0.1.0"
description = "Generate tribal knowledge reports from Salesforce CSV exports."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Tribal KB contributors" }]
dependencies = []

[project.scripts]
tribal-kb = "tribal_kb.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tribal_kb = ["templates/*.html"]

